--- a/styles/constants/_colours.scss
+++ b/styles/constants/_colours.scss
@@ -1,15 +1,15 @@
 $black: #000;
-$a: #191a20;
-$a: #3f4150;
-$a: #8c8d96;
-$a: #b2b3b9;
-$a: #e0e2e7;
-$a: #f7f8fa;
+$dark: #191a20;
+$primary: #3f4150;
+$secondary: #8c8d96;
+$tertiary: #b2b3b9;
+$border: #e0e2e7;
+$background: #f7f8fa;
 $white: #fff;
 
 $blue: #3da5f5;
-$a: #3186c4;
-$a: #ecf6fe;
+$blue-dark: #3186c4;
+$blue-light: #ecf6fe;
 
-$a: #f86d7d;
-$a: #22c58b;
+$red: #f86d7d;
+$green: #22c58b;
