--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,5 +5,7 @@
 @import 'base/normalize';
 @import 'base/reset';
 
+@import 'mixins/text-style';
+
 @import 'layouts/grids';
 @import 'layouts/breakpoints';
