--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,11 +1,12 @@
 @import 'constants/colours';
 @import 'constants/typography';
+@import 'constants/breakpoints';
 
 @import 'base/fonts';
 @import 'base/normalize';
 @import 'base/reset';
 
 @import 'mixins/text-style';
+@import 'mixins/responsive';
 
 @import 'layouts/grids';
-@import 'layouts/breakpoints';
