♻️ Refactored responsiveness mixins

--- a/styles/layouts/_grids.scss
+++ b/styles/layouts/_grids.scss
@@ -24,8 +24,6 @@
 * max-container-size                  1140px
 */
 
-@import './breakpoints';
-
 $gutter: 20px;
 
 $sm-columns: 4;
@@ -60,7 +58,7 @@ $lg-max-container: ($lg-unit + $gutter) * $lg-columns;
     }
   }
 
-  @media screen and (min-width: $md-breakpoint) {
+  @include responsive(T) {
     max-width: $md-max-container;
     padding: 0 $md-margin;
 
@@ -71,7 +69,7 @@ $lg-max-container: ($lg-unit + $gutter) * $lg-columns;
     }
   }
 
-  @media screen and (min-width: $lg-breakpoint) {
+  @include responsive(D) {
     max-width: $lg-max-container;
     padding: 0;
 
