--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -3,7 +3,7 @@
   width: 1px !important;
   height: 1px !important;
   padding: 0 !important;
-  margin: -1px !important; // Fix for https://github.com/twbs/bootstrap/issues/25686
+  margin: -1px !important;
   overflow: hidden !important;
   clip: rect(0, 0, 0, 0) !important;
   white-space: nowrap !important;
@@ -17,7 +17,11 @@
 }
 
 .md-only {
-  @media screen and (min-width: $lg-breakpoint) and (max-width: $md-breakpoint - 1) {
+  @media screen and (max-width: $md-breakpoint - 1) {
+    display: none !important;
+  }
+
+  @media screen and (min-width: $lg-breakpoint) {
     display: none !important;
   }
 }
@@ -29,13 +33,13 @@
 }
 
 .sm-hidden {
-  @media screen and (min-width: $md-breakpoint - 1) {
+  @media screen and (max-width: $md-breakpoint - 1) {
     display: none !important;
   }
 }
 
 .md-hidden {
-  @media screen and (min-width: $md-breakpoint) and (max-width: $lg-breakpoint - 1) {
+  @media screen and (min-width: $md-breakpoint) and(max-width: $lg-breakpoint - 1) {
     display: none !important;
   }
 }
