--- a/styles/components/_gnb-nav.scss
+++ b/styles/components/_gnb-nav.scss
@@ -1,4 +1,6 @@
 .gnb-nav {
+  $padding: 8px;
+
   ul {
     padding-left: 0;
   }
@@ -8,14 +10,22 @@
   }
 
   &-item {
-    margin-right: 24px;
+    margin-right: 24px - ($padding * 2);
 
     &:last-child {
       margin-right: 0;
     }
 
+    &.is-active,
+    &:hover {
+      a {
+        color: $blue;
+      }
+    }
+
     a {
       @include text-style(18, $primary);
+      padding: $padding;
       font-weight: 700;
     }
   }
