--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -31,14 +31,34 @@
     margin-right: 4px;
   }
 
+  &-auth {
+    margin-left: 8px;
+
+    a {
+      @include text-style(14, $secondary);
+      font-weight: 700;
+
+      &:hover {
+        color: $blue;
+      }
+
+      &:first-child {
+        margin-right: 12px;
+      }
+    }
+  }
+
   @include responsive(T) {
+    $padding: 8px;
+
     &-wrapper {
       height: 80px;
     }
 
     .logo {
       position: static;
-      margin-right: 32px;
+      padding: $padding;
+      margin-right: 32px - ($padding * 2);
       transform: none;
 
       img {
