--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -1,10 +1,33 @@
 .my-menu {
   $tooltip-size: 12px;
+  $buutton-size: 32px;
 
   position: relative;
 
+  &-avatar-button,
+  &.is-active {
+    width: $buutton-size;
+    height: $buutton-size;
+    overflow: hidden;
+    border: 3px solid $white;
+    border-radius: 50%;
+    transition: border-color 200ms ease-in-out;
+
+    &:hover {
+      border-color: $blue;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
   &-content {
     @include pos-center-x;
+    top: $tooltip-size + $buutton-size + 8px;
     border-radius: 4px;
     box-shadow: $dropdown-shadow;
 
