🚧 Created a dropdown menu component

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -1,8 +1,14 @@
-body {
-  background-color: #000;
-}
-
 .sidebar-dropdown {
+  $dropdown-height: 36px;
+  $dropdown-list-padding: 20px;
+  $community-length: 8;
+  $store-length: 9;
+  $expert-length: 2;
+
+  @function _calculate-max-content-height($length) {
+    @return $dropdown-height * $length + $dropdown-list-padding;
+  }
+
   &.is-active {
     .sidebar-dropdown-button {
       color: $blue;
@@ -10,6 +16,24 @@ body {
   }
 
   &.is-open {
+    .is-community {
+      .sidebar-dropdown-content {
+        max-height: _calculate-max-content-height($community-length);
+      }
+    }
+
+    .is-store {
+      .sidebar-dropdown-content {
+        max-height: _calculate-max-content-height($store-length);
+      }
+    }
+
+    .is-expert {
+      .sidebar-dropdown-content {
+        max-height: _calculate-max-content-height($expert-length);
+      }
+    }
+
     .sidebar-dropdown-button i:last-child {
       transform: translateY(-50%) rotate(180deg);
     }
@@ -19,7 +43,7 @@ body {
     }
 
     .sidebar-dropdown-list {
-      padding-bottom: 8px;
+      padding-bottom: $dropdown-list-padding;
     }
   }
 
@@ -73,7 +97,7 @@ body {
           @include flex(start);
           @include text-style(14, $primary);
           width: 100%;
-          height: 36px;
+          height: $dropdown-height;
           padding: 0 12px;
           font-weight: 700;
         }
