🩹 Changed sidebar-dropdown-content height

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -39,10 +39,10 @@
     }
 
     .sidebar-dropdown-content {
-      max-height: 152px;
+      max-height: 324px + $dropdown-list-padding;
     }
 
-    .sidebar-dropdown-list {
+    .sidebar-dropdown-content-list {
       padding-bottom: $dropdown-list-padding;
     }
   }
