🐛 Hidden padding-left bug fix

--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  padding-left: 0; // hidden bug fix
   margin: 0;
   font-family: $font-main;
   -webkit-font-smoothing: antialiased;
