--- a/styles/layouts/_sidebar.scss
+++ b/styles/layouts/_sidebar.scss
@@ -56,4 +56,34 @@
       width: 84px;
     }
   }
+
+  &-menu {
+    .sidebar-dropdown {
+      border-top: 1px solid $border;
+
+      &.is-expert {
+        border-bottom: 1px solid $border;
+      }
+    }
+
+    &-my {
+      margin-top: 16px;
+
+      &-list {
+        &-item {
+          a {
+            @include flex(start);
+            @include text-style(14, $primary);
+            width: 100%;
+            height: 36px;
+            padding: 0 12px;
+
+            &:active {
+              color: $blue;
+            }
+          }
+        }
+      }
+    }
+  }
 }
