--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,6 +27,7 @@
 @import 'components/gnb-icon-buttons';
 @import 'components/my-menu';
 @import 'components/dropdown';
+@import 'components/search-history';
 
 @import 'layouts/grids';
 @import 'layouts/gnb';
