--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -1,5 +1,8 @@
 .lnb {
-  overflow: auto;
+  $lnb-link-padding: 8px;
+  $grid-margin: $sm-margin + $gutter / 2;
+
+  overflow-x: auto;
 
   &::-webkit-scrollbar {
     display: none;
@@ -7,16 +10,18 @@
 
   &-list {
     @include inline-flex(start);
-    position: relative;
-    left: -8px;
+    height: 40px;
+    padding: 0 #{$grid-margin - $lnb-link-padding};
+    margin-left: -#{$grid-margin};
     white-space: nowrap;
+    border-bottom: 1px solid $border;
   }
 
   &-list-item {
     &.is-active {
       a {
         color: $blue;
-        border-bottom: 2px solid $blue;
+        border-bottom-color: $blue;
       }
     }
 
@@ -24,12 +29,9 @@
       @include inline-flex;
       @include text-style(13, $dark);
       height: 40px;
-      padding: 0 8px;
+      padding: 0 $lnb-link-padding;
       font-weight: 700;
+      border-bottom: 2px solid transparent;
     }
-  }
-
-  .ic-new {
-    color: $red;
   }
 }
