--- a/styles/layouts/_sidebar.scss
+++ b/styles/layouts/_sidebar.scss
@@ -1,5 +1,6 @@
 .sidebar {
   $sidebar-width: 240px;
+  @include no-scrollbar;
 
   position: fixed;
   top: 0;
@@ -104,9 +105,5 @@
         }
       }
     }
-  }
-
-  &::-webkit-scrollbar {
-    display: none;
   }
 }
