✨ Created dimensions constant and applied to related components

--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -1,10 +1,11 @@
 .gnb {
   position: relative;
+  background-color: $white;
   border-bottom: 1px solid $border;
 
   &-wrapper {
     @include flex(between);
-    height: 50px;
+    height: $gnb-height-sm - 1px;
   }
 
   .logo {
@@ -52,7 +53,7 @@
     $padding: 8px;
 
     &-wrapper {
-      height: 80px;
+      height: $gnb-height-md - 1px;
     }
 
     .logo {
