--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,6 +30,7 @@
 @import 'components/my-menu';
 @import 'components/dropdown';
 @import 'components/search-history';
+@import 'components/breadcrumbs';
 
 @import 'layouts/grids';
 @import 'layouts/gnb';
