--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,6 +31,7 @@
 @import 'components/dropdown';
 @import 'components/search-history';
 @import 'components/breadcrumbs';
+@import 'components/product-carousel';
 
 @import 'layouts/grids';
 @import 'layouts/gnb';
