--- a/styles/components/_product-carousel.scss
+++ b/styles/components/_product-carousel.scss
@@ -10,36 +10,34 @@
   &-thumbnail {
     @include pos-center-x;
     bottom: 16px;
+  }
 
-    .thumbnail {
-      &-list {
-        @include flex;
+  .thumbnail-list {
+    @include flex;
+  }
+
+  .thumbnail-item {
+    @include flex;
+    margin: 0 4px;
+
+    &.tns-nav-active {
+      button {
+        opacity: 1;
+        transform: scale(1.3333333);
       }
+    }
 
-      &-item {
-        @include flex;
-        margin: 0 4px;
+    button {
+      width: 6px;
+      height: 6px;
+      background-color: $white;
+      border-radius: 50%;
+      opacity: 0.7;
+      transition: transform 100ms ease-in-out, opacity 100ms ease-in-out;
+    }
 
-        &.tns-nav-active {
-          button {
-            opacity: 1;
-            transform: scale(1.3333333);
-          }
-        }
-
-        button {
-          width: 6px;
-          height: 6px;
-          background-color: $white;
-          border-radius: 50%;
-          opacity: 0.7;
-          transition: transform 100ms ease-in-out, opacity 100ms ease-in-out;
-        }
-
-        img {
-          display: none;
-        }
-      }
+    img {
+      display: none;
     }
   }
 
