✏️ Fixed desktop min-width typo

--- a/styles/mixins/_responsive.scss
+++ b/styles/mixins/_responsive.scss
@@ -5,7 +5,7 @@
     }
   }
   @if ($screen == 'D') {
-    @media screen and (min-width: $md-breakpoint) {
+    @media screen and (min-width: $lg-breakpoint) {
       @content;
     }
   }
