--- a/styles/components/_product-info.scss
+++ b/styles/components/_product-info.scss
@@ -22,7 +22,8 @@
     .info-review {
       @include flex(start);
 
-      .start-rating-13 {
+      .star-rating {
+        @include star-rating(13px);
         margin-right: 8px;
       }
 
@@ -81,6 +82,34 @@
     span {
       display: block;
       margin-bottom: 2px;
+    }
+  }
+
+  @include responsive(T) {
+    padding: 0;
+
+    &-header {
+      .info-brand {
+        display: inline-block;
+        margin-bottom: 8px;
+      }
+
+      .info-title {
+        @include text-style(24);
+        margin-bottom: 8px;
+      }
+
+      .info-review {
+        .star-rating {
+          font-size: 16px;
+        }
+
+        p {
+          strong {
+            margin-right: -3px;
+          }
+        }
+      }
     }
   }
 }
