--- a/styles/components/_product-table.scss
+++ b/styles/components/_product-table.scss
@@ -3,6 +3,7 @@
   $table-th-width-sm: 100px;
   $table-th-width-md: 140px + $table-cell-padding;
 
+  width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
 
