--- a/styles/components/_review-card.scss
+++ b/styles/components/_review-card.scss
@@ -41,6 +41,21 @@
   &-body {
     margin-bottom: 20px;
 
+    .review-image {
+      width: 64px;
+      height: 64px;
+      margin-bottom: 8px;
+      border-radius: 4px;
+      overflow: hidden;
+
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
     p {
       @include text-style(13, $primary);
     }
@@ -52,6 +67,13 @@
     button {
       width: 120px;
       margin-right: 8px;
+
+      i {
+        font-size: 20px;
+        margin-left: -5px;
+        color: $white;
+        margin-right: 4px;
+      }
     }
 
     p {
@@ -81,6 +103,12 @@
     }
 
     &-body {
+      .review-image {
+        width: 112px;
+        height: 112px;
+        margin-bottom: 16px;
+      }
+
       p {
         @include text-style(14);
       }
