--- a/styles/components/_score-stats.scss
+++ b/styles/components/_score-stats.scss
@@ -37,7 +37,7 @@
       }
 
       .active-bar {
-        width: 30px;
+        width: 0;
         height: 5px;
         border-radius: (5px / 2);
         background-color: $blue;
