--- a/styles/components/_score-stats.scss
+++ b/styles/components/_score-stats.scss
@@ -41,6 +41,8 @@
         height: 5px;
         border-radius: (5px / 2);
         background-color: $blue;
+        animation-name: slide-active-bar;
+        animation-duration: 1000ms;
       }
 
       .count {
@@ -61,6 +63,16 @@
           margin-right: 8px;
         }
       }
+    }
+  }
+
+  @keyframes slide-active-bar {
+    0% {
+      transform: translate3d(-100px, 0, 0);
+    }
+
+    100% {
+      transform: translate3d(0, 0, 0);
     }
   }
 }
