--- a/styles/components/_product-inquiry.scss
+++ b/styles/components/_product-inquiry.scss
@@ -1,4 +1,10 @@
 .product-inquiry {
+  .inquiry-empty {
+    @include text-style(16, $secondary);
+    text-align: center;
+    padding: 48px 0;
+  }
+
   @include mobile-only {
     padding-bottom: 0;
 
@@ -18,6 +24,12 @@
     .product-section-header .text-button,
     .product-section-content {
       display: none;
+    }
+  }
+
+  @include responsive(T) {
+    .inquiry-empty {
+      padding: 28px 0;
     }
   }
 }
