--- a/styles/components/_inquiry-card.scss
+++ b/styles/components/_inquiry-card.scss
@@ -48,7 +48,14 @@
       }
 
       p {
+        @include flex(start);
         color: $primary;
+
+        i {
+          margin-right: 8px;
+          color: $tertiary;
+          font-size: 16px;
+        }
       }
     }
   }
