--- a/styles/components/_inquiry-card.scss
+++ b/styles/components/_inquiry-card.scss
@@ -33,29 +33,46 @@
   &-body {
     @include text-style(13);
 
-    .question-content {
+    .inquiry-content {
       position: relative;
       padding-left: 20px;
 
-      span {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 20px;
-        height: 20px;
-        font-weight: 700;
-        color: $blue;
+      &:first-child:not(:last-child) {
+        margin-bottom: 12px;
+      }
+    }
+
+    span {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 20px;
+      font-weight: 700;
+      color: $blue;
+    }
+
+    p {
+      @include flex(start);
+      color: $primary;
+
+      i {
+        margin-right: 8px;
+        color: $tertiary;
+        font-size: 16px;
+      }
+    }
+
+    .seller {
+      @include flex(start);
+      margin-bottom: 4px;
+
+      strong {
+        margin-right: 4px;
       }
 
-      p {
-        @include flex(start);
-        color: $primary;
-
-        i {
-          margin-right: 8px;
-          color: $tertiary;
-          font-size: 16px;
-        }
+      time {
+        @include text-style(12, $tertiary);
       }
     }
   }
@@ -68,12 +85,23 @@
     &-body {
       @include text-style(14);
 
-      .question-content {
+      .inquiry-content {
         padding-left: 24px;
+
+        &:first-child:not(:last-child) {
+          margin-bottom: 16px;
+        }
       }
 
       span {
         @include text-style(16);
+      }
+
+      .seller {
+        strong {
+          @include text-style(16);
+          margin-bottom: 8px;
+        }
       }
     }
   }
