--- a/styles/components/_product-card.scss
+++ b/styles/components/_product-card.scss
@@ -1,13 +1,19 @@
 .product-card {
   &-image {
+    position: relative;
     margin-bottom: 8px;
+    padding-bottom: 100%;
+    width: 100%;
+    height: 0;
     border-radius: 4px;
     overflow: hidden;
 
     img {
+      @include pos-center;
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
       transition: transform 200ms ease-in-out;
     }
   }
