--- a/styles/components/_gallery-card.scss
+++ b/styles/components/_gallery-card.scss
@@ -3,6 +3,21 @@
   overflow: hidden;
   border-radius: 6px;
 
+  &-image {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+
+    img {
+      @include pos-center;
+      display: block;
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+  }
+
   &-detail {
     @include flex(start);
     position: absolute;
