--- a/styles/components/_product-section.scss
+++ b/styles/components/_product-section.scss
@@ -3,7 +3,7 @@
 
   &-divider {
     height: 8px;
-    margin: 0 -#{$gird-margin};
+    margin: 0 -#{$grid-margin};
     background-color: $border;
   }
 
