--- a/styles/constants/_grids.scss
+++ b/styles/constants/_grids.scss
@@ -11,4 +11,4 @@ $lg-columns: 12;
 $lg-unit: 75px;
 $lg-max-container: ($lg-unit + $gutter) * $lg-columns;
 
-$gird-margin: 15px;
+$grid-margin: 15px;
