--- a/styles/main.scss
+++ b/styles/main.scss
@@ -52,6 +52,7 @@
 @import 'components/product-shipment';
 @import 'components/product-card';
 @import 'components/product-reco';
+@import 'components/user-gallery';
 @import 'components/gallery-card';
 
 @import 'layouts/grids';
