--- a/style.css
+++ b/style.css
@@ -1893,6 +1893,182 @@ i {
   .product-shipment .product-section-divider:last-child {
     display: none; } }
 
+.product-card-image {
+  position: relative;
+  margin-bottom: 8px;
+  padding-bottom: 100%;
+  width: 100%;
+  height: 0;
+  border-radius: 4px;
+  overflow: hidden; }
+  .product-card-image img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 200ms ease-in-out; }
+
+.product-card-brand {
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: -0.005em;
+  color: #8c8d96;
+  display: block;
+  margin-bottom: 4px; }
+
+.product-card-title {
+  font-size: 13px;
+  line-height: 20px;
+  letter-spacing: -0.01em;
+  color: #191a20;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-weight: 400;
+  line-height: 16px; }
+
+.product-card-price {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 4px; }
+  .product-card-price .percent,
+  .product-card-price .price {
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.02em;
+    font-weight: 700; }
+  .product-card-price .percent {
+    margin-right: 8px;
+    color: #3da5f5; }
+  .product-card-price .price {
+    color: #191a20; }
+
+.product-card-detail {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 8px; }
+  .product-card-detail .rating,
+  .product-card-detail .review {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; }
+    .product-card-detail .rating dt,
+    .product-card-detail .review dt {
+      margin-right: 2px; }
+  .product-card-detail .rating {
+    margin-right: 8px; }
+    .product-card-detail .rating dt {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 12px;
+      height: 12px; }
+    .product-card-detail .rating i {
+      font-size: 12px;
+      color: #3da5f5; }
+    .product-card-detail .rating dd {
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: -0.005em;
+      color: #3f4150;
+      font-weight: 700; }
+  .product-card-detail .review {
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: -0.005em;
+    color: #8c8d96;
+    font-weight: 700; }
+
+.product-reco .product-list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap; }
+
+.product-reco .product-item {
+  width: calc((100% - 20px) / 2); }
+  .product-reco .product-item:nth-child(1), .product-reco .product-item:nth-child(2) {
+    margin-bottom: 20px; }
+  .product-reco .product-item a {
+    display: block; }
+    .product-reco .product-item a:active img {
+      transform: translate(-50%, -50%) scale(1.1); }
+    .product-reco .product-item a:active .product-card-title {
+      opacity: 0.4; }
+
+@media screen and (min-width: 768px) {
+  .product-reco .product-item {
+    width: calc((100% - 32px) / 3); }
+    .product-reco .product-item:last-child {
+      display: none; }
+    .product-reco .product-item:nth-child(1), .product-reco .product-item:nth-child(2) {
+      margin-bottom: 0; }
+    .product-reco .product-item a:hover img {
+      transform: translate(-50%, -50%) scale(1.1); }
+    .product-reco .product-item a:hover .product-card-title {
+      opacity: 0.4; } }
+
+.user-gallery {
+  margin: 0 -15px; }
+  @media screen and (min-width: 768px) {
+    .user-gallery {
+      margin: 0; } }
+
+.gallery-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 6px; }
+  .gallery-card-image {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%; }
+    .gallery-card-image img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: block;
+      width: 100%;
+      height: auto;
+      object-fit: cover; }
+  .gallery-card-detail {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 0 16px;
+    width: 100%;
+    height: 54px;
+    background-color: rgba(0, 0, 0, 0.4); }
+    .gallery-card-detail .avatar-32,
+    .gallery-card-detail .order {
+      flex-shrink: 0; }
+    .gallery-card-detail .username,
+    .gallery-card-detail .order {
+      font-size: 16px;
+      line-height: 24px;
+      letter-spacing: -0.01em;
+      color: #fff; }
+    .gallery-card-detail .avatar-32 {
+      margin-right: 8px; }
+    .gallery-card-detail .username {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      flex-grow: 1;
+      padding-right: 8px;
+      font-weight: 700; }
+
 /*
 * MOBILE (<768px) ----------------------------------------
 * fixture                             sm
@@ -2177,10 +2353,10 @@ i {
     flex-shrink: 0;
     margin-right: 8px; }
   .sidebar-user .user-name {
-    flex-grow: 1;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap; }
+    white-space: nowrap;
+    flex-grow: 1; }
   .sidebar-auth {
     display: flex;
     align-items: center;
