--- a/styles/components/_user-gallery.scss
+++ b/styles/components/_user-gallery.scss
@@ -1,13 +1,50 @@
 .user-gallery {
   margin: 0 -#{$grid-margin};
+  overflow: hidden;
 
   &-slider {
     margin-bottom: 4px;
   }
 
+  &-controls {
+    .control-button {
+      @include flex;
+      width: 40px;
+      height: 40px;
+      font-size: 28px;
+      color: $primary;
+      border-radius: 50%;
+      transition: background-color 150ms ease-in-out, color 150ms ease-in-out;
+
+      &:hover {
+        color: $white;
+        background: $blue;
+      }
+
+      &.is-prev {
+        i {
+          margin-left: -3px;
+          transform: rotate(90deg);
+        }
+      }
+
+      &.is-next {
+        i {
+          margin-right: -3px;
+          transform: rotate(-90deg);
+        }
+      }
+    }
+  }
+
   .thumbnail-list {
     @include flex(start);
     padding-left: 2px;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   .thumbnail-item {
@@ -32,8 +69,8 @@
 
       img {
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 64px;
+        height: 64px;
         object-fit: cover;
       }
     }
@@ -54,6 +91,11 @@
       button {
         width: 75px;
         height: 75px;
+
+        img {
+          width: 75px;
+          height: 75px;
+        }
       }
     }
   }
