--- a/styles/components/_product-section.scss
+++ b/styles/components/_product-section.scss
@@ -5,6 +5,10 @@
     height: 8px;
     margin: 0 -#{$grid-margin};
     background-color: $border;
+
+    &.is-large {
+      height: 24pxw;
+    }
   }
 
   @include responsive(T) {
