--- a/styles/layouts/_order-cta.scss
+++ b/styles/layouts/_order-cta.scss
@@ -1,9 +1,41 @@
 .order-cta {
+  @include flex;
   position: fixed;
   bottom: 0;
   left: 0;
   z-index: $order-cta-level;
   width: 100%;
   height: $order-cta-height;
-  background-color: hotpink;
+  padding: 0 4px;
+  background-color: $white;
+
+  .btn-ghost {
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 72px;
+    margin-right: 4px;
+    &.is-active {
+      i {
+        color: $blue;
+      }
+    }
+
+    i {
+      font-size: 24px;
+      color: $primary;
+    }
+
+    span {
+      font-size: 10px;
+      font-weight: 400;
+      line-height: 16px;
+      letter-spacing: -0.005em;
+      color: $secondary;
+    }
+  }
+
+  .btn-fill-primary {
+    flex-grow: 1;
+  }
 }
