--- a/styles/layouts/_order-form-modal.scss
+++ b/styles/layouts/_order-form-modal.scss
@@ -6,9 +6,12 @@
   display: none;
   padding-top: 16px;
   width: 100%;
+  max-height: 81vh;
+  overflow-y: auto;
   border-radius: 12px 12px 0 0;
   box-shadow: 0 -4px 20px rgba($black, 0.15);
   background-color: $white;
+  overscroll-behavior: contain;
 
   &.is-open {
     display: block;
@@ -16,9 +19,12 @@
     animation-duration: 300ms;
   }
 
-  .order-checkouts,
-  .order-summary {
+  .order-checkouts {
     margin-bottom: 16px;
+  }
+
+  .order-summary {
+    margin-bottom: 48px + (4px * 2) + 16px;
   }
 
   .order-inputs {
@@ -26,8 +32,12 @@
   }
 
   .button-group {
+    position: fixed;
+    bottom: 0;
+    left: 0;
     padding: 4px;
-    padding-top: 0;
+    width: 100%;
+    background-color: $white;
   }
 
   @include responsive(T) {
