--- a/styles/modules/_buttons.scss
+++ b/styles/modules/_buttons.scss
@@ -53,7 +53,7 @@
   transition: color 200ms ease-in-out;
 
   &:not(:disabled):hover {
-    background-color: $secondary;
+    color: $secondary;
   }
 }
 
