--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -5,7 +5,7 @@
   position: relative;
 
   &.is-active {
-    .my-menu.avatar-button {
+    .my-menu-avatar-button {
       border-color: $blue;
     }
 
@@ -63,7 +63,6 @@
     &::after {
       @include pos-center-x;
       top: -#{$tooltip-size * 2};
-
       display: block;
       width: 0;
       height: 0;
@@ -97,13 +96,14 @@
     button {
       @include flex(start);
       @include text-style(16, $primary);
+      width: 100%;
       height: 44px;
       padding: 8px;
+      border-radius: 2px;
     }
 
     &:hover {
       background-color: $background;
-      border-radius: 2px;
     }
   }
 }
