🐛 Modified $lnb-height-md to $lnb-height-sm of height in .global-header layout

--- a/styles/layouts/_global-header.scss
+++ b/styles/layouts/_global-header.scss
@@ -1,6 +1,6 @@
 .global-header {
   width: 100%;
-  height: $gnb-height-sm + $lnb-height-md;
+  height: $gnb-height-sm + $lnb-height-sm;
 
   .gnb,
   .lnb {
